Version 1.0.10
    Bugs
    ----
    
    Other
    -----
    Added "Use Procedure Bodies" connection string option to allow calling procedures without
       using procedure metadata (if possible).
    

Version 1.0.9
    
    Bugs fixed or addressed
    -----------------------
    Bug #23268 System.FormatException when invoking procedure with ENUM input parameter 
		Bug #23538 Exception thrown when GetSchemaTable is called and "fields" is null. 
    Bug #23758 Unable to connect to any server - IPv6 related 
    Bug #23749 VarChar field size over 255 causes a System.OverflowException 
    Bug #18186 Problem with implementation of PreparedStatement 
    Bug #24565 Inferring DbType fails when reusing commands and the first time the value is nul 
	Bug #24661 mysql-connector-net-5.0.2-beta Driver.IsTooOld() Error.... 
	Bug #23862 Problem with CommandBuilder 'GetInsertCommand' method 
    Bug #25033 Exception raised/ HANG if no SELECT privileges granted for stored procedure call 
	  [this is a correction;  a previous change log entry indicated that Connector/Net
	   no longer required select privs on mysql database.  This is not true and select privs
	   are required. This will be fixed when the server exposes procedure parameters via
 	   information schema.]
    Bug #25013 Return Value parameter not found 
    Bug #22400 Nested transactions 
    Bug #25443 ExecuteScalar() hangs when more than one bad result 		
    Bug #24802 Error Handling 
    Bug #25614 After connection is closed, and opened again UTF-8 characters are not read well 
    Bug #25625 Crashes when calling with CommandType set to StoredProcedure 
    Bug #25651 SELECT does not work properly when WHERE contains UTF-8 characters 
    Bug #25726 MySqlConnection throws NullReferenceException and ArgumentNullException 
    Bug #25609 MySqlDataAdapter.FillSchema 
    Bug #25912 selecting negative time values gets wrong results 

    Other changes
    -------------